# Chereda

./: Example.ipynb  LICENSE  pyproject.toml
chereda/core/: ApplyToDataUnit.py  Data.py  DataLayer.py  DataUnit.py  __init__.py
potok/: __init__.py
potok/core/: ApplyToDataDict.py  ApplyToDataUnit.py  Data.py  DataLayer.py  Layer.py  Node.py  Pipeline.py  __init__.py
potok/methods/: Folder.py  Validation.py  __init__.py
potok/tabular/: Bagging.py  DKL.py  Error.py  Folder.py  HyperOptimization.py  LightGBM.py  LinReg.py  Operators.py  TabularData.py  Validation.py  __init__.py  utils.py
potok/vision/: Augmentation.py  BatchFolder.py  BatchTrainer.py  Batcher.py  EpochTrainer.py  Folder.py  ImageData.py  MobileNetV3.py  Model.py  NNModel.py  TorchNNModel.py  Trainer.py  __init__.py  utils.py
tests/: test.py
tests/tabular/: test.py
