[tool.poetry]
name = "potok"
version = "0.1.0"
description = ""
authors = ["ksetherg <ksetherg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ray = "^1.3.0"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
