[tool.poetry]
name = "potok"
version = "0.1.0"
description = "Framework for building machine learning pipelines"
authors = ["ksetherg <ksetherg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"
ray = "^1.3.0"
wrapt= "^1.12.1"
tensorflow = "^2.4.1"
tensorflow-probability="^0.12.1"
statsmodels="^0.12.0"
torch="^1.9.0"
torchvision=^0.10.0'
opencv-python="^4.3.0.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
